grammar/ZenithParser.cpp

// Generated from ../../grammar/ZenithParser.g4 by ANTLR 4.13.2


#include "ZenithParserVisitor.h"

#include "ZenithParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ZenithParserStaticData final {
  ZenithParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ZenithParserStaticData(const ZenithParserStaticData&) = delete;
  ZenithParserStaticData(ZenithParserStaticData&&) = delete;
  ZenithParserStaticData& operator=(const ZenithParserStaticData&) = delete;
  ZenithParserStaticData& operator=(ZenithParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag zenithparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<ZenithParserStaticData> zenithparserParserStaticData = nullptr;

void zenithparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (zenithparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(zenithparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<ZenithParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "semi", "varDeclaration", "identifierList", 
      "functionDecl", "parameterList", "parameter", "equation", "exprStatement", 
      "blockStatement", "ifStatement", "whileStatement", "forStatement", 
      "returnStatement", "printStatement", "type", "baseType", "dependentPredicate", 
      "predicate", "rangePredicate", "unaryPredicate", "binaryPredicate", 
      "complexPredicate", "predicateArgList", "predicateValue", "predicateOp", 
      "expression", "logicalOrExpr", "logicalAndExpr", "bitwiseOrExpr", 
      "bitwiseXorExpr", "bitwiseAndExpr", "equalityExpr", "relationalExpr", 
      "shiftExpr", "additiveExpr", "multiplicativeExpr", "powerExpr", "unaryExpr", 
      "callExpr", "callSuffix", "primaryExpr"
    },
    std::vector<std::string>{
      "", "", "", "'if'", "'else'", "'for'", "'while'", "'return'", "'in'", 
      "'print'", "'let'", "'true'", "'false'", "'null'", "'not'", "'+'", 
      "'-'", "'*'", "'/'", "'%'", "'**'", "'=='", "'!='", "'<'", "'<='", 
      "'>'", "'>='", "'&&'", "'||'", "'!'", "'&'", "'|'", "'^'", "'~'", 
      "'<<'", "'>>'", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", 
      "'..'", "'.'", "':'", "'->'", "'='"
    },
    std::vector<std::string>{
      "", "INDENT", "DEDENT", "IF", "ELSE", "FOR", "WHILE", "RETURN", "IN", 
      "PRINT", "LET", "TRUE", "FALSE", "NULL", "NOT_WORD", "PLUS", "MINUS", 
      "STAR", "DIV", "MOD", "POW", "EQ", "NEQ", "LT", "LE", "GT", "GE", 
      "AND", "OR", "NOT", "AMPERSAND", "PIPE", "CARET", "TILDE", "LSHIFT", 
      "RSHIFT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
      "SEMICOLON", "COMMA", "DOTDOT", "DOT", "COLON", "ARROW", "EQUALS", 
      "INTEGER", "FLOAT", "STRING", "IDENTIFIER", "NEWLINE", "WS", "COMMENT", 
      "BLOCK_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  zenithparserParserStaticData = std::move(staticData);
}

}

ZenithParser::ZenithParser(TokenStream *input) : ZenithParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ZenithParser::ZenithParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ZenithParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *zenithparserParserStaticData->atn, zenithparserParserStaticData->decisionToDFA, zenithparserParserStaticData->sharedContextCache, options);
}

ZenithParser::~ZenithParser() {
  delete _interpreter;
}

const atn::ATN& ZenithParser::getATN() const {
  return *zenithparserParserStaticData->atn;
}

std::string ZenithParser::getGrammarFileName() const {
  return "ZenithParser.g4";
}

const std::vector<std::string>& ZenithParser::getRuleNames() const {
  return zenithparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& ZenithParser::getVocabulary() const {
  return zenithparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ZenithParser::getSerializedATN() const {
  return zenithparserParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

ZenithParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ZenithParser::ProgramContext::EOF() {
  return getToken(ZenithParser::EOF, 0);
}

std::vector<tree::TerminalNode *> ZenithParser::ProgramContext::NEWLINE() {
  return getTokens(ZenithParser::NEWLINE);
}

tree::TerminalNode* ZenithParser::ProgramContext::NEWLINE(size_t i) {
  return getToken(ZenithParser::NEWLINE, i);
}

std::vector<ZenithParser::StatementContext *> ZenithParser::ProgramContext::statement() {
  return getRuleContexts<ZenithParser::StatementContext>();
}

ZenithParser::StatementContext* ZenithParser::ProgramContext::statement(size_t i) {
  return getRuleContext<ZenithParser::StatementContext>(i);
}

std::vector<ZenithParser::SemiContext *> ZenithParser::ProgramContext::semi() {
  return getRuleContexts<ZenithParser::SemiContext>();
}

ZenithParser::SemiContext* ZenithParser::ProgramContext::semi(size_t i) {
  return getRuleContext<ZenithParser::SemiContext>(i);
}


size_t ZenithParser::ProgramContext::getRuleIndex() const {
  return ZenithParser::RuleProgram;
}


std::any ZenithParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ZenithParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

ZenithParser::ProgramContext* ZenithParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, ZenithParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(89);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(86);
        match(ZenithParser::NEWLINE); 
      }
      setState(91);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(108);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      setState(92);
      statement();
      setState(102);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(94); 
          _errHandler->sync(this);
          _la = _input->LA(1);
          do {
            setState(93);
            semi();
            setState(96); 
            _errHandler->sync(this);
            _la = _input->LA(1);
          } while (_la == ZenithParser::SEMICOLON);
          setState(98);
          statement(); 
        }
        setState(104);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
      }
      setState(106);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == ZenithParser::SEMICOLON) {
        setState(105);
        semi();
      }
      break;
    }

    default:
      break;
    }
    setState(113);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ZenithParser::NEWLINE) {
      setState(110);
      match(ZenithParser::NEWLINE);
      setState(115);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(116);
    match(ZenithParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

ZenithParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ZenithParser::VarDeclarationContext* ZenithParser::StatementContext::varDeclaration() {
  return getRuleContext<ZenithParser::VarDeclarationContext>(0);
}

ZenithParser::FunctionDeclContext* ZenithParser::StatementContext::functionDecl() {
  return getRuleContext<ZenithParser::FunctionDeclContext>(0);
}

ZenithParser::EquationContext* ZenithParser::StatementContext::equation() {
  return getRuleContext<ZenithParser::EquationContext>(0);
}

ZenithParser::IfStatementContext* ZenithParser::StatementContext::ifStatement() {
  return getRuleContext<ZenithParser::IfStatementContext>(0);
}

ZenithParser::WhileStatementContext* ZenithParser::StatementContext::whileStatement() {
  return getRuleContext<ZenithParser::WhileStatementContext>(0);
}

ZenithParser::ForStatementContext* ZenithParser::StatementContext::forStatement() {
  return getRuleContext<ZenithParser::ForStatementContext>(0);
}

ZenithParser::ReturnStatementContext* ZenithParser::StatementContext::returnStatement() {
  return getRuleContext<ZenithParser::ReturnStatementContext>(0);
}

ZenithParser::PrintStatementContext* ZenithParser::StatementContext::printStatement() {
  return getRuleContext<ZenithParser::PrintStatementContext>(0);
}

ZenithParser::ExprStatementContext* ZenithParser::StatementContext::exprStatement() {
  return getRuleContext<ZenithParser::ExprStatementContext>(0);
}

ZenithParser::BlockStatementContext* ZenithParser::StatementContext::blockStatement() {
  return getRuleContext<ZenithParser::BlockStatementContext>(0);
}


size_t ZenithParser::StatementContext::getRuleIndex() const {
  return ZenithParser::RuleStatement;
}


std::any ZenithParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ZenithParserVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

ZenithParser::StatementContext* ZenithParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, ZenithParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(128);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(118);
      varDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(119);
      functionDecl();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(120);
      equation();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(121);
      ifStatement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(122);
      whileStatement();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(123);
      forStatement();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(124);
      returnStatement();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(125);
      printStatement();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(126);
      exprStatement();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(127);
      blockStatement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SemiContext ------------------------------------------------------------------

ZenithParser::SemiContext::SemiContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ZenithParser::SemiContext::SEMICOLON() {
  return getToken(ZenithParser::SEMICOLON, 0);
}


size_t ZenithParser::SemiContext::getRuleIndex() const {
  return ZenithParser::RuleSemi;
}


std::any ZenithParser::SemiContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ZenithParserVisitor*>(visitor))
    return parserVisitor->visitSemi(this);
  else
    return visitor->visitChildren(this);
}

ZenithParser::SemiContext* ZenithParser::semi() {
  SemiContext *_localctx = _tracker.createInstance<SemiContext>(_ctx, getState());
  enterRule(_localctx, 4, ZenithParser::RuleSemi);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(130);
    match(ZenithParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclarationContext ------------------------------------------------------------------

ZenithParser::VarDeclarationContext::VarDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ZenithParser::IdentifierListContext* ZenithParser::VarDeclarationContext::identifierList() {
  return getRuleContext<ZenithParser::IdentifierListContext>(0);
}

tree::TerminalNode* ZenithParser::VarDeclarationContext::COLON() {
  return getToken(ZenithParser::COLON, 0);
}

ZenithParser::TypeContext* ZenithParser::VarDeclarationContext::type() {
  return getRuleContext<ZenithParser::TypeContext>(0);
}


size_t ZenithParser::VarDeclarationContext::getRuleIndex() const {
  return ZenithParser::RuleVarDeclaration;
}


std::any ZenithParser::VarDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ZenithParserVisitor*>(visitor))
    return parserVisitor->visitVarDeclaration(this);
  else
    return visitor->visitChildren(this);
}

ZenithParser::VarDeclarationContext* ZenithParser::varDeclaration() {
  VarDeclarationContext *_localctx = _tracker.createInstance<VarDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, ZenithParser::RuleVarDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(132);
    identifierList();
    setState(135);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ZenithParser::COLON) {
      setState(133);
      match(ZenithParser::COLON);
      setState(134);
      type();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifierListContext ------------------------------------------------------------------

ZenithParser::IdentifierListContext::IdentifierListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> ZenithParser::IdentifierListContext::IDENTIFIER() {
  return getTokens(ZenithParser::IDENTIFIER);
}

tree::TerminalNode* ZenithParser::IdentifierListContext::IDENTIFIER(size_t i) {
  return getToken(ZenithParser::IDENTIFIER, i);
}

std::vector<tree::TerminalNode *> ZenithParser::IdentifierListContext::COMMA() {
  return getTokens(ZenithParser::COMMA);
}

tree::TerminalNode* ZenithParser::IdentifierListContext::COMMA(size_t i) {
  return getToken(ZenithParser::COMMA, i);
}


size_t ZenithParser::IdentifierListContext::getRuleIndex() const {
  return ZenithParser::RuleIdentifierList;
}


std::any ZenithParser::IdentifierListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ZenithParserVisitor*>(visitor))
    return parserVisitor->visitIdentifierList(this);
  else
    return visitor->visitChildren(this);
}

ZenithParser::IdentifierListContext* ZenithParser::identifierList() {
  IdentifierListContext *_localctx = _tracker.createInstance<IdentifierListContext>(_ctx, getState());
  enterRule(_localctx, 8, ZenithParser::RuleIdentifierList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(137);
    match(ZenithParser::IDENTIFIER);
    setState(142);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ZenithParser::COMMA) {
      setState(138);
      match(ZenithParser::COMMA);
      setState(139);
      match(ZenithParser::IDENTIFIER);
      setState(144);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclContext ------------------------------------------------------------------

ZenithParser::FunctionDeclContext::FunctionDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ZenithParser::FunctionDeclContext::IDENTIFIER() {
  return getToken(ZenithParser::IDENTIFIER, 0);
}

tree::TerminalNode* ZenithParser::FunctionDeclContext::LPAREN() {
  return getToken(ZenithParser::LPAREN, 0);
}

tree::TerminalNode* ZenithParser::FunctionDeclContext::RPAREN() {
  return getToken(ZenithParser::RPAREN, 0);
}

tree::TerminalNode* ZenithParser::FunctionDeclContext::EQUALS() {
  return getToken(ZenithParser::EQUALS, 0);
}

ZenithParser::ExpressionContext* ZenithParser::FunctionDeclContext::expression() {
  return getRuleContext<ZenithParser::ExpressionContext>(0);
}

ZenithParser::BlockStatementContext* ZenithParser::FunctionDeclContext::blockStatement() {
  return getRuleContext<ZenithParser::BlockStatementContext>(0);
}

ZenithParser::ParameterListContext* ZenithParser::FunctionDeclContext::parameterList() {
  return getRuleContext<ZenithParser::ParameterListContext>(0);
}

tree::TerminalNode* ZenithParser::FunctionDeclContext::ARROW() {
  return getToken(ZenithParser::ARROW, 0);
}

ZenithParser::TypeContext* ZenithParser::FunctionDeclContext::type() {
  return getRuleContext<ZenithParser::TypeContext>(0);
}

std::vector<tree::TerminalNode *> ZenithParser::FunctionDeclContext::NEWLINE() {
  return getTokens(ZenithParser::NEWLINE);
}

tree::TerminalNode* ZenithParser::FunctionDeclContext::NEWLINE(size_t i) {
  return getToken(ZenithParser::NEWLINE, i);
}


size_t ZenithParser::FunctionDeclContext::getRuleIndex() const {
  return ZenithParser::RuleFunctionDecl;
}


std::any ZenithParser::FunctionDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ZenithParserVisitor*>(visitor))
    return parserVisitor->visitFunctionDecl(this);
  else
    return visitor->visitChildren(this);
}

ZenithParser::FunctionDeclContext* ZenithParser::functionDecl() {
  FunctionDeclContext *_localctx = _tracker.createInstance<FunctionDeclContext>(_ctx, getState());
  enterRule(_localctx, 10, ZenithParser::RuleFunctionDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(145);
    match(ZenithParser::IDENTIFIER);
    setState(146);
    match(ZenithParser::LPAREN);
    setState(148);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ZenithParser::IDENTIFIER) {
      setState(147);
      parameterList();
    }
    setState(150);
    match(ZenithParser::RPAREN);
    setState(153);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ZenithParser::ARROW) {
      setState(151);
      match(ZenithParser::ARROW);
      setState(152);
      type();
    }
    setState(167);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
    case 1: {
      setState(155);
      match(ZenithParser::EQUALS);
      setState(156);
      expression();
      break;
    }

    case 2: {
      setState(158);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == ZenithParser::EQUALS) {
        setState(157);
        match(ZenithParser::EQUALS);
      }
      setState(163);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(160);
          match(ZenithParser::NEWLINE); 
        }
        setState(165);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx);
      }
      setState(166);
      blockStatement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterListContext ------------------------------------------------------------------

ZenithParser::ParameterListContext::ParameterListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ZenithParser::ParameterContext *> ZenithParser::ParameterListContext::parameter() {
  return getRuleContexts<ZenithParser::ParameterContext>();
}

ZenithParser::ParameterContext* ZenithParser::ParameterListContext::parameter(size_t i) {
  return getRuleContext<ZenithParser::ParameterContext>(i);
}

std::vector<tree::TerminalNode *> ZenithParser::ParameterListContext::COMMA() {
  return getTokens(ZenithParser::COMMA);
}

tree::TerminalNode* ZenithParser::ParameterListContext::COMMA(size_t i) {
  return getToken(ZenithParser::COMMA, i);
}


size_t ZenithParser::ParameterListContext::getRuleIndex() const {
  return ZenithParser::RuleParameterList;
}


std::any ZenithParser::ParameterListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ZenithParserVisitor*>(visitor))
    return parserVisitor->visitParameterList(this);
  else
    return visitor->visitChildren(this);
}

ZenithParser::ParameterListContext* ZenithParser::parameterList() {
  ParameterListContext *_localctx = _tracker.createInstance<ParameterListContext>(_ctx, getState());
  enterRule(_localctx, 12, ZenithParser::RuleParameterList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(169);
    parameter();
    setState(174);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ZenithParser::COMMA) {
      setState(170);
      match(ZenithParser::COMMA);
      setState(171);
      parameter();
      setState(176);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterContext ------------------------------------------------------------------

ZenithParser::ParameterContext::ParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ZenithParser::ParameterContext::IDENTIFIER() {
  return getToken(ZenithParser::IDENTIFIER, 0);
}

tree::TerminalNode* ZenithParser::ParameterContext::COLON() {
  return getToken(ZenithParser::COLON, 0);
}

ZenithParser::TypeContext* ZenithParser::ParameterContext::type() {
  return getRuleContext<ZenithParser::TypeContext>(0);
}


size_t ZenithParser::ParameterContext::getRuleIndex() const {
  return ZenithParser::RuleParameter;
}


std::any ZenithParser::ParameterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ZenithParserVisitor*>(visitor))
    return parserVisitor->visitParameter(this);
  else
    return visitor->visitChildren(this);
}

ZenithParser::ParameterContext* ZenithParser::parameter() {
  ParameterContext *_localctx = _tracker.createInstance<ParameterContext>(_ctx, getState());
  enterRule(_localctx, 14, ZenithParser::RuleParameter);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(177);
    match(ZenithParser::IDENTIFIER);
    setState(180);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ZenithParser::COLON) {
      setState(178);
      match(ZenithParser::COLON);
      setState(179);
      type();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EquationContext ------------------------------------------------------------------

ZenithParser::EquationContext::EquationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ZenithParser::ExpressionContext *> ZenithParser::EquationContext::expression() {
  return getRuleContexts<ZenithParser::ExpressionContext>();
}
